{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "48cdda28-e2a4-4fd8-811c-703f0a14563b",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "a063ffee-75df-44d9-b0fe-c899e95d3528",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1df6a423-e922-4cde-8a5d-59d28482eeb7",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}